@@ -53,6 +53,7 @@
 * Cybersource Rest: Update message and error_code [almalee24] #5276
 * Paysafe: Add support for `external_initial_transaction_id` [rachelkirk] #5291
 * Worldpay: Add customStringFields [jcreiff] #5284
+* Airwallex: truncate descriptor field to 32 characters [jcreiff] #5292
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
